# assignment-tn

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml
assignment/: context_locator.py  embeddings_creator.py  embeddings_utils.py  main.py
